l1/lfs250/ch5/deployment1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echoserver
  name: echoserver
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echoserver
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: echoserver
    spec:
     containers:
      - name: echoserver
        image: k8s.gcr.io/echoserver:1.10
        ports:
          - containerPort: 8080
