l1/lfs250/ch5/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-nginx-pod
spec:
  containers:
    - name: nginx
      image: nginx:1.19
      ports:
        - containerPort: 80
