l1/lfs250/ch5/networkPolicy0.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-db-policy
  namespace: production
spec:
  podSelector:
   matchLabels:
    app: backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
       - podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
       - podSelector:
            matchLabels:
              app: db
      ports:
        - protocol: TCP
          port: 5432
    - to:
       - ipBlock:
            cidr: 203.0.113.10/32
      ports:
       - protocol: TCP
         port: 443
